<?xml version="1.0" encoding="utf-8"?><!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2022 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/pocketpaint_text_top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextFieldTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pocketpaint_font_size_text"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/pocketpaint_round_rect_shape"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minEms="3"
                android:padding="4dp"
                android:saveEnabled="false"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                tools:ignore="LabelFor"
                tools:text="100" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:layout_marginTop="@dimen/toolbar_height"
            tools:ignore="RelativeOverlap,RtlHardcoded">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pocketpaint_text_tool_dialog_toggle_underlined"
                    style="@style/CircularToggleButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/text_tool_dialog_underline_shortcut"
                    android:textSize="20sp" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Space style="@style/PocketPaintToolHorizontalSpace" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pocketpaint_text_tool_dialog_toggle_italic"
                    style="@style/CircularToggleButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/text_tool_dialog_italic_shortcut"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <Space style="@style/PocketPaintToolHorizontalSpace" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pocketpaint_text_tool_dialog_toggle_bold"
                    style="@style/CircularToggleButtonStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/text_tool_dialog_bold_shortcut"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pocketpaint_text_bottom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_above="@id/pocketpaint_text_tool_dialog_list_font">

            <include
                android:id="@+id/pocketpaint_layout_text_tool_options_view_shape_size"
                layout="@layout/pocketpaint_layout_shape_size_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pocketpaint_text_tool_dialog_list_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pocketpaint_text_tool_dialog_input_text_layout"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <RelativeLayout
            android:id="@+id/pocketpaint_text_tool_dialog_input_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/background_light"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/pocketpaint_text_tool_dialog_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundtint_color_edittext_state_list"
                android:hint="@string/text_tool_dialog_input_hint"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pocketpaint_text_reshape_size_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="10dp" >

        <include
            android:id="@+id/pocketpaint_layout_text_tool_change_size_shape_size"
            layout="@layout/pocketpaint_layout_shape_size_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>
