<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2022 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <!-- PocketPaint font chooser options -->
    <string-array name="pocketpaint_main_text_tool_fonts">
        <item>@string/text_tool_dialog_font_sans_serif</item>
        <item>@string/text_tool_dialog_font_monospace</item>
        <item>@string/text_tool_dialog_font_serif</item>
        <item>@string/text_tool_dialog_font_dubai</item>
        <item>@string/text_tool_dialog_font_arabic_stc</item>
    </string-array>

</resources>
